# career-diagnostic-pipeline

./: .gitignore  README.md  TODO.md  pyproject.toml
archive/: README.md
docs/: Pipeline-System-Summary.md  Pipeline_Users_Guide_v1.md
examples/: README.md  synthetic-whd.md
examples/acme-robotics-senior-pm/: appendix.md  gapmap.yaml  jd.txt  patches.yaml  prescriptions.yaml  report.md  requirements.yaml  resume.md  scd.yaml  screen.yaml
prompts/career-documentarian/: career-documentarian.md
prompts/ghost-editor/: ghost-editor.md
prompts/intelligence-analyst/: intelligence-analyst.md
prompts/optimization-strategist/: optimization-strategist.md
prompts/recruiter-simulation/: recruiter-simulation.md
prompts/resume-auditor/: resume-auditor.md
skill/: SKILL.md
skill/contracts/: finishing.md  fit.md  reconciliation.md  research.md  screening.md  synthesis.md
skill/helpers/: ats.py  ats_chars.py  canary.py  compress_candidates.py  config.py  gapmap_summary.py  gate1.py  length_budget.py  numbers_strip.py  prescriptions.py  relevance.py  render_docx.py  runfolder.py  score.py  skill_taxonomy.yaml  tags.py  (+4 more)
tests/: conftest.py  test_ats.py  test_ats_chars.py  test_canary.py  test_compress_candidates.py  test_config.py  test_gapmap_summary.py  test_gate1.py  test_integration.py  test_length_budget.py  test_numbers.py  test_prescriptions.py  test_relevance.py  test_render_docx.py  test_runfolder.py  test_score.py  test_tags.py  test_validate.py  test_whd_anchors.py  test_whd_patch.py  test_whitespace_check.py
ui/: career-pipeline-orchestrator.jsx
(+9 files in other folders)
